--- a/pages/sub1/sub2/index.mdx
+++ b/pages/sub1/sub2/index.mdx
@@ -1,6 +1,4 @@
-import Bleed from 'nextra-theme-docs/bleed'
-
-# Nextra SubFolder
+# Nextra SubSubFolder
 
 **Nextra** is a [Next.js](https://nextjs.org) based static site generator.
 
